[package]
name = "star"
version = "0.1.0"
edition = "2021"

[dependencies]
oqs = "0.9.0"        # Open Quantum Safe library for post-quantum cryptography
aes = "0.7.5"          # AES encryption library
block-modes = "0.8.1"  # Block cipher modes like CBC
block-padding = "0.3.3" # PKCS7 padding
rand = "0.8"         # Random number generation
sha3 = "0.10.8"
thiserror = "2.0.3"
pkcs7 = "0.4.1"